# pictocross-solver

./: .gitignore  index.py  pyproject.toml  readme.md
PictoCrossSolver/: Analyzers.py  Caches.py  Elements.py  Engines.py  Helpers.py  Loaders.py  PictoCross.py  Readers.py  Renderers.py  Solvers.py  Strategies.py  Writers.py  index.py
logs/: super-easy-2.txt
puzzles/: super-difficile-1.txt  super-easy-3.txt
puzzles/biggest-picture-cross/animals/: puzzle-4-3.txt
tests/: test_HintExpandsFilledMarksFromEdgeInEstimatedZoneSolver.py
tests/PictoCrossSolver/Analyzers/: test_HintCrossoverRegexAnalyzer.py  test_RegexBuilder.py  test_RegexZoneAnalyzer.py  test_ZoneSerializer.py
tests/PictoCrossSolver/Loaders/: test_TextLoader.py
tests/PictoCrossSolver/Solvers/: test_CrossMarksOutsideOfSolvedHintZonesSolver.py  test_HintExpandsFilledMarksFromEdgeInEstimatedZoneSolver.py  test_HintFitsInEstimatedZoneSolver.py
tests/integration/: test_puzzle.py
tests/integration/puzzles/: .gitignore  super-easy-2.txt
tests/units/PictoCrossSolver/Analyzers/: test_HintCrossoverRegexAnalyzer.py  test_HintUnionRegexAnalyzer.py  test_RegexBuilder.py  test_RegexZoneAnalyzer.py  test_ZoneSerializer.py
tests/units/PictoCrossSolver/Elements/: test_Puzzle.py  test_PuzzleChangeSet.py
tests/units/PictoCrossSolver/Helpers/: test_ChangeMinimizer.py  test_HintPositionner.py
tests/units/PictoCrossSolver/Loaders/: scenario1.txt  scenario2.txt  test_TextLoader.py
tests/units/PictoCrossSolver/Renderers/: test_SolutionRenderer.py
(+28 files in other folders)
