[tool.poetry]
name = "pictocross-solver"
version = "0.1.0"
description = ""
authors = ["Mathieu Dumoulin <thecrazycodr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
redis = "^3.2"
argparse = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
